syntax = "proto3";

option csharp_namespace = "SnackTime.MediaServer.Models.ProtoGenerated";

import "proto/storage.proto";

package snacktime.media;

message Series {
    int32 id = 1;
    string title = 2;
    ImagesUrl imagesUrl = 3;
    string overview = 4;
    bool monitored = 5;
}

message ImagesUrl {
    string banner = 1;
    string fanart = 2;
    string poster = 3;
}

message Episode {
    int32 seriesId = 1;
    int32 episodeFileId = 2;
    int32 seasonNumber = 3;
    int32 episideNumber = 4;
    string title = 5;
    string overview = 6;
    string playableId = 7;
    snacktime.storage.Progress progress = 8;
}

enum Providers {
    Sonarr = 0;
    Radarr = 1;
}
